<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_module">

    <ImageView
        android:id="@+id/iv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/icon_company" />

    <TextView
        android:id="@+id/tv_app_version"
        style="@style/TextBlack.Large"
        android:layout_below="@+id/iv_company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_version"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_company_name"
        style="@style/TextBlack.Large"
        android:layout_above="@+id/tv_describe"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/blue_font"
        android:text="@string/company_name" />

    <TextView
        android:id="@+id/tv_describe"
        style="@style/TextBlack.Normal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/company_describe" />

</RelativeLayout>