<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_module"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_alway"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextBlack.Normal"
                android:text="@string/alway" />

            <TextView
                android:id="@+id/tv_alway"
                style="@style/TextGray.Small"
                android:text="未启用" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/icon_fanhx" />
    </LinearLayout>

    <include layout="@layout/include_line_2" />

    <LinearLayout
        android:id="@+id/ll_connected"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextBlack.Normal"
                android:text="@string/connected" />

            <TextView
                android:id="@+id/tv_connected"
                style="@style/TextGray.Small"
                android:text="未启用" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/icon_fanhx" />
    </LinearLayout>

    <include layout="@layout/include_line_2" />

    <LinearLayout
        android:id="@+id/ll_timeout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextBlack.Normal"
                android:text="@string/timeout" />

            <TextView
                android:id="@+id/tv_timeout"
                style="@style/TextGray.Small"
                android:text="未启用" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/icon_fanhx" />
    </LinearLayout>

    <include layout="@layout/include_line_2" />

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextBlack.Normal"
                android:text="@string/call_error" />

            <TextView
                android:id="@+id/tv_error"
                style="@style/TextGray.Small"
                android:text="未启用" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/icon_fanhx" />
    </LinearLayout>

    <include layout="@layout/include_line_2" />
</LinearLayout>